Photon (M3) JDT Patch for Groovy-Eclipse: JDT commit b4703cd