@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2000, 2014 IBM Corporation and others.
+ * Copyright (c) 2000, 2016 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -2857,10 +2857,10 @@ public void test088() {
 			"import java.lang.reflect.*;\n" +
 			"public class X extends Date implements Runnable{\n" +
 			" \n" +
-			" Integer w = new Integer(90);\n" +
+			" Integer w = Integer.valueOf(90);\n" +
 			" protected double x = 91.1;\n" +
 			" public long y = 92;\n" +
-			" static public Boolean z = new Boolean(true); \n" +
+			" static public Boolean z = Boolean.valueOf(true); \n" +
 			" public class X_inner {\n" +
 			"  public X_inner() {\n" +
 			"   this.super();\n" +
