@@ -4,7 +4,7 @@
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
  * http://www.eclipse.org/legal/epl-v10.html
- * 
+ *
  * Contributors:
  *     IBM Corporation - initial API and implementation
  *     Stephan Herrmann - Contribution for
@@ -1020,6 +1020,11 @@ public void test038() {
 }
 // https://bugs.eclipse.org/bugs/show_bug.cgi?id=406641, [1.8][compiler][codegen] Code generation for intersection cast.
 public void test039() {
+// FIXME: was differentiating error messages ever implemented?
+//	String errMsg = (this.complianceLevel >= ClassFileConstants.JDK9) ?
+//			"X (in module: Unnamed Module) cannot be cast to I (in module: Unnamed Module)" :
+//				"X cannot be cast to I";
+	String errMsg = "X cannot be cast to I";
 	this.runConformTest(
 			new String[] {
 					"X.java",
@@ -1040,7 +1045,7 @@ public void test039() {
 					"	}\n" +
 					"}\n",
 				},
-				"X cannot be cast to I");
+				errMsg);
 }
 // https://bugs.eclipse.org/bugs/show_bug.cgi?id=406773, [1.8][compiler][codegen] "java.lang.IncompatibleClassChangeError" caused by attempted invocation of private constructor
 public void test041() {
@@ -5023,7 +5028,10 @@ public void test447119d() {
 			"[- java.util.List<java.lang.String> noop(java.util.List<java.lang.String>)]",
 			null,
 			true,
-			new String [] { "-Ddummy" }); // Not sure, unless we force the VM to not be reused by passing dummy vm argument, the generated program aborts midway through its execution.
+			(isJRE9 
+			? new String[] { "--add-opens", "java.base/java.io=ALL-UNNAMED" } 
+			: new String [] { "-Ddummy" }) // Not sure, unless we force the VM to not be reused by passing dummy vm argument, the generated program aborts midway through its execution.
+			);
 }
 // https://bugs.eclipse.org/bugs/show_bug.cgi?id=447119, [1.8][compiler] method references lost generic type information (4.4 -> 4.4.1 regression) 
 public void test447119e() {
@@ -5184,8 +5192,11 @@ public void test449063() {
 			"    }\n" + 
 			"}"
 			},
-			"Test.Test$Tuple<java.lang.Integer, java.lang.String>\n" +
-			"Test.Test$Tuple<java.lang.String, java.lang.Double>",
+			(isJRE9
+			? "Test$Tuple<java.lang.Integer, java.lang.String>\n" +
+			  "Test$Tuple<java.lang.String, java.lang.Double>"
+			: "Test.Test$Tuple<java.lang.Integer, java.lang.String>\n" +
+			  "Test.Test$Tuple<java.lang.String, java.lang.Double>"),
 			customOptions);
 }
 // https://bugs.eclipse.org/bugs/show_bug.cgi?id=449063, [1.8][compiler] Bring back generic signatures for Lambda Expressions 
@@ -5252,8 +5263,11 @@ public void test449063a() {
 			"    }\n" + 
 			"}"
 			},
-			"Test.Test$Tuple<java.lang.Integer, java.lang.String>\n" +
-			"Test.Test$Tuple<java.lang.String, java.lang.Double>",
+			(isJRE9
+			? "Test$Tuple<java.lang.Integer, java.lang.String>\n" +
+			  "Test$Tuple<java.lang.String, java.lang.Double>"
+			: "Test.Test$Tuple<java.lang.Integer, java.lang.String>\n" +
+			  "Test.Test$Tuple<java.lang.String, java.lang.Double>"),
 			customOptions);
 }
 // https://bugs.eclipse.org/bugs/show_bug.cgi?id=449063, [1.8][compiler] Bring back generic signatures for Lambda Expressions 
@@ -5463,8 +5477,11 @@ public void test449063e() {
 			"    }\n" + 
 			"}"
 			},
-			"Test.Test$Tuple<java.lang.Integer, java.lang.String>\n" +
-			"Test.Test$Tuple<java.lang.String, java.lang.Double>",
+			(isJRE9
+			? "Test$Tuple<java.lang.Integer, java.lang.String>\n" +
+			  "Test$Tuple<java.lang.String, java.lang.Double>"
+			: "Test.Test$Tuple<java.lang.Integer, java.lang.String>\n" +
+			  "Test.Test$Tuple<java.lang.String, java.lang.Double>"),
 			customOptions);
 }
 // https://bugs.eclipse.org/bugs/show_bug.cgi?id=449063, [1.8][compiler] Bring back generic signatures for Lambda Expressions 
