@@ -4,7 +4,7 @@
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
  * http://www.eclipse.org/legal/epl-v10.html
- *
+ * 
  * Contributors:
  *        Andy Clement (GoPivotal, Inc) aclement@gopivotal.com - Contributions for
  *                          Bug 405104 - [1.8][compiler][codegen] Implement support for serializeable lambdas
@@ -1574,7 +1574,11 @@ public class SerializableLambdaTest extends AbstractRegressionTest {
 		"Looking for Testbed.foo\n" +
 		"true",
 		null,true,
-		new String[]{"-Ddummy"});
+		(isJRE9 
+		? new String[] { "--add-opens", "java.base/java.io=ALL-UNNAMED" } 
+		: new String [] { "-Ddummy" })
+		);
+
 		
 		String bootstrapEntries = printBootstrapMethodsAttribute(OUTPUT_DIR + File.separator + "Testbed.class");
 		String expectedOutput = 
@@ -1658,7 +1662,10 @@ public class SerializableLambdaTest extends AbstractRegressionTest {
 		"Looking for Testbed$MethodRefImpl.<init>\n" +
 		"true",
 		null,true,
-		new String[]{"-Ddummy"});
+		(isJRE9 
+		? new String[] { "--add-opens", "java.base/java.io=ALL-UNNAMED" } 
+		: new String [] { "-Ddummy" })
+		);
 	}
 
 	// Serializable reference expressions that share the same name
